--- a/dashboard/styles/css-solar.html
+++ b/dashboard/styles/css-solar.html
@@ -147,6 +147,62 @@
             mask-size: 100% 100%;
         }
 
+        .temaki--power-meter {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'%3E%3Cpath fill='%23000' d='M6 .5V2h2.5c.5 0 .5.5.5.5v10s0 .5-.5.5H6v1.5c0 .5-3 .5-3 0V13H.5c-.5 0-.5-.5-.5-.5v-10S0 2 .5 2H3V.5C3 0 6 0 6 .5M4.5 4C2.5 4 1 5.5 1 7.5S2.5 11 4.5 11S8 9.5 8 7.5S6.5 4 4.5 4'/%3E%3Cpath fill='%23000' d='M3 9h3c.5 0 .5 1 0 1H3c-.5 0-.5-1 0-1m-.5-3.5c-.25.25 1.1 1.6 1.1 1.6s-.1.2-.1.4c0 .5.38 1 1 1c.63 0 1-.5 1-1s-.37-1-1-1c-.3 0-.4.1-.4.1S2.75 5.25 2.5 5.5m9-3.5L10 8h2l-1 5l4-7h-2l1.5-4z'/%3E%3C/svg%3E");
+            background-color: currentColor;
+            -webkit-mask-image: var(--svg);
+            mask-image: var(--svg);
+            -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+            -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+            }
+
+        .cbi--solar-battery {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M17.757 11.771h3.257v.904h-3.257zm0 1.149h3.257v.904h-3.257zm0 1.121h3.257v.904h-3.257zm0 1.12h3.257v.904h-3.257zm.008 1.39a.635.635 0 0 0 .635.635h2a.636.636 0 0 0 .635-.635v-.269h-3.27zm3.287-9.609h-.122v-.337a.154.154 0 0 0-.153-.153h-2.783a.154.154 0 0 0-.153.153v.337h-.091a.947.947 0 0 0-.948.947v9.153c-1.238-1.843-1.4-1.754-1.517-1.694s-.091.186-.064.418a5.4 5.4 0 0 1 .041.907c-.025.539-.045 1.005-.322 1.19a1.08 1.08 0 0 1-.851 0a1.8 1.8 0 0 1-.549-.295l.032.021l2.771-5.284l-.076-.219l-3.083 5.9H2.08l.117.256h11.035l.237-.451a2.5 2.5 0 0 0 .569.257a1.7 1.7 0 0 0 .658.1a.74.74 0 0 0 .345-.117c.355-.238.378-.748.4-1.339a5.4 5.4 0 0 0-.042-.937a2 2 0 0 1-.018-.216a9.5 9.5 0 0 1 1.457 1.923a.944.944 0 0 0 .908.691h3.3A.947.947 0 0 0 22 17.2V7.889a.947.947 0 0 0-.948-.947m.168 9.721a.726.726 0 0 1-.726.726h-2.217a.726.726 0 0 1-.726-.726V8.32a.726.726 0 0 1 .726-.726h2.217a.726.726 0 0 1 .726.726ZM11.153 9.356a.06.06 0 0 0 .077-.035l.415-1.14a.06.06 0 0 0-.036-.077a.06.06 0 0 0-.076.036l-.415 1.14a.06.06 0 0 0 .035.076m.835.428l.779-.929a.06.06 0 0 0-.007-.085a.06.06 0 0 0-.084.008l-.78.929a.06.06 0 0 0 .008.084a.06.06 0 0 0 .084-.007m.472.672a.06.06 0 0 0 .081.022l1.051-.606a.06.06 0 0 0 .021-.082a.06.06 0 0 0-.081-.022l-1.05.606a.06.06 0 0 0-.022.082m.295.815a.06.06 0 0 0 .069.049l1.2-.211a.06.06 0 0 0 .048-.069a.06.06 0 0 0-.072-.049l-1.2.209a.06.06 0 0 0-.045.071m-6.18-.171l1.194.211a.06.06 0 0 0 .021-.118l-1.2-.21a.06.06 0 1 0-.02.117Zm1.479-.629a.06.06 0 0 0 .082-.022a.06.06 0 0 0-.022-.081l-1.05-.607a.06.06 0 1 0-.06.1zm.556-.693a.06.06 0 0 0 .084.008A.06.06 0 0 0 8.7 9.7l-.78-.929a.06.06 0 1 0-.091.076Zm.836-.424a.06.06 0 0 0 .035-.077l-.414-1.14a.06.06 0 0 0-.113.041l.415 1.14a.06.06 0 0 0 .077.036M10.3 9.2a.06.06 0 0 0 .06-.059V7.932a.06.06 0 1 0-.12 0v1.213a.06.06 0 0 0 .06.055m-3.486 2.476a.04.04 0 0 0-.033.014a.04.04 0 0 0-.014.034a.047.047 0 0 0 .047.047h6.963a.05.05 0 0 0 .034-.014a.04.04 0 0 0 .014-.033a.047.047 0 0 0-.048-.048h-1.285a2.2 2.2 0 0 0-4.393 0zm9.406.25H5.019L2 17.85h11.122zm-.643.441l-1.224 2.341h-.221l1.222-2.341zm-.336 0l-1.222 2.341h-.238L15 12.367Zm-.352 0l-1.221 2.341h-.221l1.22-2.341zm-.335 0l-1.22 2.341H13.1l1.22-2.341zm-.346 0l-1.219 2.341h-.222l1.219-2.341zm-.335 0l-1.219 2.341h-.238l1.218-2.341zm-.352 0L12.3 14.708h-.221l1.221-2.341Zm-.6 0l-1.216 2.341h-.221l1.216-2.341Zm-.335 0l-1.215 2.341h-.238l1.214-2.341zm-.352 0l-1.214 2.341h-.22l1.214-2.341zm-.335 0l-1.213 2.341h-.233l1.212-2.341zm-.347 0l-1.212 2.341h-.221l1.211-2.341zm-.335 0l-1.211 2.341h-.238l1.21-2.341zm-.352 0l-1.21 2.341h-.221l1.209-2.341zm-.631 0l-1.209 2.341H8.8l1.207-2.341zm-.336 0l-1.207 2.341h-.238l1.206-2.341zm-.352 0L8.34 14.708h-.222l1.206-2.341zm-.335 0l-1.2 2.341h-.238l1.205-2.341zm-.346 0l-1.2 2.341h-.226l1.2-2.341zm-.335 0l-1.2 2.341h-.242l1.2-2.341zm-.352 0l-1.2 2.341h-.224l1.2-2.341zm-.632 0l-1.2 2.341h-.222l1.2-2.341zm-.335 0l-1.2 2.341h-.238l1.2-2.341zm-.352 0l-1.2 2.341h-.22l1.2-2.341zm-.335 0l-1.2 2.341h-.231l1.2-2.341zm-.347 0l-1.2 2.341h-.218l1.2-2.341zm-.335 0l-1.2 2.341h-.234L5.6 12.367Zm-.574 0h.222L4.3 14.708h-.226Zm-2.584 5.065l1.195-2.341H4.1l-1.195 2.341zm.333 0l1.2-2.341h.238l-1.2 2.341zm.35 0l1.2-2.341h.221l-1.2 2.341zm.333 0l1.2-2.341h.23l-1.2 2.341zm.345 0l1.2-2.341h.221l-1.2 2.341zm.333 0l1.2-2.341h.238l-1.2 2.341zm.349 0l1.2-2.341h.221l-1.2 2.341zm.629 0l1.2-2.341h.222l-1.2 2.341zm.333 0l1.2-2.341h.241l-1.2 2.341zm.349 0l1.2-2.341h.222l-1.2 2.341zm.334 0l1.2-2.341h.233L6.6 17.432Zm.344 0l1.206-2.341h.221l-1.206 2.341zm.333 0l1.207-2.341h.238l-1.208 2.341zm.35 0l1.207-2.341h.222l-1.209 2.341zm.628 0l1.209-2.341h.222l-1.211 2.341zm.333 0l1.21-2.341h.238L8.6 17.432Zm.35 0l1.211-2.341h.221L8.93 17.432Zm.333 0l1.212-2.341h.233l-1.213 2.341zm.344 0l1.213-2.341h.222l-1.214 2.341zm.333 0l1.214-2.341h.238l-1.214 2.341zm.35 0l1.215-2.341h.221l-1.215 2.341zm.6 0l1.217-2.341h.213l-1.217 2.341zm.333 0l1.218-2.341h.238l-1.218 2.341zm.35 0l1.219-2.341h.221l-1.223 2.341zm.333 0l1.22-2.341h.233l-1.221 2.341zm.344 0l1.221-2.341h.222l-1.222 2.341zm.333 0l1.222-2.341h.238L12.6 17.432Zm.35 0l1.223-2.341h.221l-1.227 2.341z'/%3E%3C/svg%3E");
+            background-color: currentColor;
+            -webkit-mask-image: var(--svg);
+            mask-image: var(--svg);
+            -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+            -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+            }
+
+        .solar--hand-money-linear {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-width='1'%3E%3Cpath d='M17.414 10.414C18 9.828 18 8.886 18 7s0-2.828-.586-3.414m0 6.828C16.828 11 15.886 11 14 11h-4c-1.886 0-2.828 0-3.414-.586m10.828 0Zm0-6.828C16.828 3 15.886 3 14 3h-4c-1.886 0-2.828 0-3.414.586m10.828 0Zm-10.828 0C6 4.172 6 5.114 6 7s0 2.828.586 3.414m0-6.828Zm0 6.828ZM13 7a1 1 0 1 1-2 0a1 1 0 0 1 2 0Z'/%3E%3Cpath stroke-linecap='round' d='M18 6a3 3 0 0 1-3-3m3 5a3 3 0 0 0-3 3M6 6a3 3 0 0 0 3-3M6 8a3 3 0 0 1 3 3m-4 9.388h2.26c1.01 0 2.033.106 3.016.308a14.9 14.9 0 0 0 5.33.118c.868-.14 1.72-.355 2.492-.727c.696-.337 1.549-.81 2.122-1.341c.572-.53 1.168-1.397 1.59-2.075c.364-.582.188-1.295-.386-1.728a1.89 1.89 0 0 0-2.22 0l-1.807 1.365c-.7.53-1.465 1.017-2.376 1.162q-.165.026-.345.047m0 0l-.11.012m.11-.012a1 1 0 0 0 .427-.24a1.49 1.49 0 0 0 .126-2.134a1.9 1.9 0 0 0-.45-.367c-2.797-1.669-7.15-.398-9.779 1.467m9.676 1.274a.5.5 0 0 1-.11.012m0 0a9.3 9.3 0 0 1-1.814.004'/%3E%3Crect width='3' height='8' x='2' y='14' rx='1.5'/%3E%3C/g%3E%3C/svg%3E");
+            background-color: currentColor;
+            -webkit-mask-image: var(--svg);
+            mask-image: var(--svg);
+            -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+            -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+            }
+
+        .streamline-cyber--money-bag-1 {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-linejoin='round' stroke-miterlimit='10' stroke-width='1'%3E%3Cpath stroke-linecap='round' d='m5.5 11l-.5-.5L7 7L4.5 8L2 7l2 3.5l-3.5 5v3l2.5 2h.5m-1-10H6m11.5.5l.5-.5L16 7l2.5 1L21 7l-2 3.5l3.5 5v3l-2.5 2h-.5m1-10H17m-4.5 4h-2l-.5 1l.5 1h2l.5 1l-.5 1h-2m1-4v-1m0 6v-1'/%3E%3Cpath d='m11.5 4l2 1.5L16 4l-2.5 5.5l4 5v5l-4 2h-4l-4-2v-5l4-5L7 4l2.5 1.5z'/%3E%3Cpath stroke-linecap='round' d='M15.5 9.5h-8'/%3E%3C/g%3E%3C/svg%3E");
+            background-color: currentColor;
+            -webkit-mask-image: var(--svg);
+            mask-image: var(--svg);
+            -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+            -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+            }
+
         /* ========== RESPONSIVE FOR 75" TV (4K - 3840x2160) ========== */
         @media (min-width: 3840px) {
             body {
@@ -154,8 +210,8 @@
             }
             
             .ph--solar-panel-duotone {
-                width: 50px;
-                height: 50px;
+                width: 70px;
+                height: 70px;
             }
             
             /* Header scaling */
