--- a/dashboard/scripts/js-solar.html
+++ b/dashboard/scripts/js-solar.html
@@ -1,410 +1,138 @@
 <!-- JavaScript -->
 <script>
-    const thaiMonths = ['มกราคม', 'กุมภาพันธ์', 'มีนาคม', 'เมษายน', 'พฤษภาคม', 'มิถุนายน', 'กรกฎาคม', 'สิงหาคม', 'กันยายน', 'ตุลาคม', 'พฤศจิกายน', 'ธันวาคม'];
-    const today = new Date();
-    const formattedDate = `${today.getDate()} ${thaiMonths[today.getMonth()]} ${today.getFullYear() + 543}`;
-    document.getElementById('start-date').textContent = formattedDate;
+    let sensors = {};
+    let costs = {};
+    let sensor_select = 0;
+    document.addEventListener('DOMContentLoaded', async () => {
+        await loadSensorData();
+        await Card1(sensors);
+        await Card2(sensors);
+        await Card3(costs);
+        await Card4(costs);
 
-    document.addEventListener('DOMContentLoaded', () => {
-        loadSensorData();
-        loadFeedingInfo();
-        loadResourceToday();
-        loadDoTrendData();
+        await loadGraphsensorById();
 
-        setInterval(() => {
-            loadSensorData();
-            loadFeedingInfo();
-            loadResourceToday();
-            loadDoTrendData();
+        initMetricBars();
+        setInterval(async () => {
+            await loadSensorData();
         }, 30000);
+
     });
 
     async function loadSensorData() {
         try {
-            const res = await fetch('/dashboard/api/generate_sensor.php');
-            const rows = await res.json();
+            const res = await fetch('../../api-website/plot_sensor_log_multiple.php',
+                {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        sensorLog: ["Voltage_S", "Current_S", "Power_S", "Voltage_L", "Current_L", "Power_L"]
+                    })
+                }
+            );
+            const data = await res.json();
+            sensors = data['sensors'];
+            console.log('✅ raw sensor data:', sensors);
 
-            console.log('✅ raw sensor data:', rows);
-
-            const sensor = {};
-            rows.forEach(item => {
-                if (!item.divice_name) return;
-                sensor[item.divice_name.toLowerCase()] = parseFloat(item.datax_value);
-            });
-
-            console.log('✅ mapped sensor:', sensor);
-
-            setCardValue('do', sensor.do);
-            setCardValue('ph', sensor.ph);
-            setCardValue('ec', sensor.ec);
-            setCardValue('temp', sensor.temp);
-            setCardValue('nh3', sensor.nh3 ?? null);
+            Create_sensorCard(sensors);
+            const firstKey = Object.keys(sensors)[0];
+            sensor_select = sensors[firstKey].monitor_id ?? 0;
 
         } catch (err) {
             console.error('❌ loadSensorData error:', err);
         }
     }
 
-    function setBadge(statusEl, text, type) {
-        const map = {
-            success: 'status px-2 py-0.5 rounded-full bg-green-100 text-green-600 text-[9px] font-bold uppercase',
-            warning: 'status px-2 py-0.5 rounded-full bg-yellow-100 text-yellow-700 text-[9px] font-bold uppercase',
-            danger: 'status px-2 py-0.5 rounded-full bg-red-100 text-red-600 text-[9px] font-bold uppercase',
-            info: 'status px-2 py-0.5 rounded-full bg-blue-100 text-blue-700 text-[9px] font-bold uppercase',
-            na: 'status px-2 py-0.5 rounded-full bg-stone-100 text-stone-500 text-[9px] font-bold uppercase',
-            orange: 'status px-2 py-0.5 rounded-full bg-orange-100 text-orange-700 text-[9px] font-bold uppercase',
-        };
-
-        statusEl.textContent = text;
-        statusEl.className = map[type] || map.na;
-    }
-
-    function getStatusByKey(key, v) {
-        if (key === 'do') {
-            if (v >= 5.0 && v <= 7.0) return { text: 'ดีที่สุด', type: 'success' };
-            if (v > 4.0) return { text: 'เหมาะสม', type: 'success' };
-            if (v >= 3.0 && v <= 4.0) return { text: 'ไม่ดี', type: 'warning' };
-            return { text: 'อันตราย', type: 'danger' };
-        }
-
-        if (key === 'ph') {
-            if (v >= 7.0 && v <= 8.5) return { text: 'เหมาะสม', type: 'success' };
-            if (v < 6.5) return { text: 'หายใจลำบาก', type: 'orange' };
-            if (v > 9.0) return { text: 'อันตราย', type: 'danger' };
-            return { text: 'ควรเฝ้าดู', type: 'warning' };
-        }
-
-        if (key === 'ec') {
-            if (v >= 23000 && v <= 45000) return { text: 'เหมาะสม', type: 'success' };
-            if (v < 23000) return { text: 'ต่ำ', type: 'info' };
-            return { text: 'สูง', type: 'danger' };
-        }
-
-        if (key === 'temp') {
-            if (v >= 28 && v <= 32) return { text: 'เหมาะสม', type: 'success' };
-            if (v < 28) return { text: 'ต่ำ', type: 'info' };
-            return { text: 'สูง', type: 'danger' };
-        }
-
-        return { text: 'N/A', type: 'na' };
-    }
-
-    function setCardValue(key, value) {
-        const card = document.getElementById(`card-${key}`);
-        if (!card) return;
-
-        const valueEl = card.querySelector('.value');
-        const statusEl = card.querySelector('.status');
-
-        if (value === null || value === undefined || isNaN(value)) {
-            valueEl.textContent = '--';
-            setBadge(statusEl, 'N/A', 'na');
-            return;
-        }
-
-        const v = Number(value);
-
-        valueEl.textContent = v.toLocaleString('en-US', {
-            minimumFractionDigits: 0,
-            maximumFractionDigits: 2
-        });
-
-        const st = getStatusByKey(key, v);
-        setBadge(statusEl, st.text, st.type);
-
-        updateMetricBar(key, v);
-    }
-
-    const BAR_CONFIG = {
-        do: {
-            min: 0,
-            max: 7,
-            leftLabel: '3.0',
-            rightLabel: '7.0',
-            leftColor: '#C73434',
-            rightColor: '#198754',
-        },
-        ph: {
-            min: 1,
-            max: 14,
-            leftLabel: '1',
-            rightLabel: '14',
-            leftColor: '#7F1D1D',
-            rightColor: '#581C87',
-        },
-        ec: {
-            min: 15000,
-            max: 50000,
-            leftLabel: '23K',
-            rightLabel: '45K',
-            leftColor: '#3B82F6',
-            rightColor: '#198754',
-        },
-        temp: {
-            min: 25,
-            max: 35,
-            leftLabel: '28°C',
-            rightLabel: '32°C',
-            leftColor: '#3B82F6',
-            rightColor: '#F97316',
-        },
-    };
-
-    function initMetricBars() {
-        document.querySelectorAll('.metric-range').forEach(wrap => {
-            const key = wrap.dataset.key;
-            const cfg = BAR_CONFIG[key];
-            if (!cfg) return;
-
-            wrap.classList.remove('hidden');
-
-            const left = wrap.querySelector('.label-left');
-            const right = wrap.querySelector('.label-right');
-            left.textContent = cfg.leftLabel || '';
-            right.textContent = cfg.rightLabel || '';
-            left.style.color = cfg.leftColor || '#C73434';
-            right.style.color = cfg.rightColor || '#198754';
-
-            const fill = wrap.querySelector('.fill');
-            if (fill) fill.style.clipPath = 'inset(0 100% 0 0)';
-        });
-    }
-
-    function updateMetricBar(key, value) {
-        const cfg = BAR_CONFIG[key];
-        if (!cfg) return;
-
-        const wrap = document.querySelector(`.metric-range[data-key="${key}"]`);
-        if (!wrap) return;
-
-        const fill = wrap.querySelector('.fill');
-
-        if (value === null || value === undefined || isNaN(value)) {
-            if (fill) fill.style.clipPath = 'inset(0 100% 0 0)';
-            return;
-        }
-
-        const v = Number(value);
-        const pct = ((v - cfg.min) / (cfg.max - cfg.min)) * 100;
-        const safePct = clamp(pct, 0, 100);
-
-        if (fill) {
-            fill.style.clipPath = `inset(0 ${100 - safePct}% 0 0)`;
-        }
-    }
-
-    function clamp(n, min, max) {
-        return Math.max(min, Math.min(max, n));
-    }
-
-    async function loadFeedingInfo() {
-        const mealsEl = document.getElementById('feeding-meals');
-        const increaseEl = document.getElementById('feeding-increase');
-        const totalEl = document.getElementById('feeding-total');
-
-        if (!mealsEl || !increaseEl || !totalEl) return;
-
-        mealsEl.textContent = '--';
-        increaseEl.textContent = '--';
-        totalEl.textContent = '--';
-
-        try {
-            const res = await fetch('/dashboard/api/food_preparation.php', {
-                cache: 'no-store'
-            });
-
-            if (!res.ok) throw new Error(`HTTP ${res.status}`);
-
-            const rows = await res.json();
-
-            if (!Array.isArray(rows) || rows.length === 0) {
-                throw new Error('ไม่มีข้อมูล');
-            }
-
-            rows.forEach(item => {
-                const label = (item.label || '').toLowerCase();
-                const value = item.value || '--';
-
-                if (label.includes('จำนวนมื้อ') || item.id == 10) {
-                    mealsEl.textContent = value;
-                } else if (label.includes('เพิ่มต่อมื้อ') || item.id == 15) {
-                    increaseEl.textContent = value;
-                } else if (label.includes('ปริมาณรวม') || item.id == 14) {
-                    totalEl.textContent = value;
-                }
-            });
-
-        } catch (err) {
-            console.error('❌ loadFeedingInfo error:', err);
-            mealsEl.textContent = 'N/A';
-            increaseEl.textContent = 'N/A';
-            totalEl.textContent = 'N/A';
-        }
-    }
-
-    let resourceTimer = null;
-    let resourceIndex = 0;
-    let resourceTotal = 0;
-
-    async function loadResourceToday() {
-        const box = document.getElementById("resource-info");
-        if (!box) return;
-
-        box.classList.remove("grid", "grid-cols-2", "gap-2");
-        box.classList.add(
-            "flex",
-            "overflow-x-auto",
-            "snap-x",
-            "snap-mandatory",
-            "scroll-smooth",
-            "no-scrollbar"
-        );
-
-        if (typeof stopResourceAutoSlide === "function") stopResourceAutoSlide();
-
-        box.innerHTML = `
-                <div class="w-full shrink-0 snap-start flex items-center justify-center">
-                <span class="text-xs text-stone-400">กำลังโหลด...</span>
+    function Create_sensorCard(sensors) {
+        let metricsCards = document.getElementById('metrics-cards');
+        metricsCards.innerHTML = "";
+        Object.entries(sensors).forEach(([key, row]) => {
+            const min = row['min'] ?? 0;
+            const max = row['max'] ?? 1;
+            let value = row.logs.length > 0 ? row.logs[0].data_value : 0;
+            let div = document.createElement('div');
+            div.id = `card-${key}`;
+            div.className = "bg-white rounded-2xl p-4 border border-stone-200 shadow-sm flex flex-col h-32 hover:ring-2 hover:ring-orange-400 transition-all duration-20 shrink-0";
+            div.innerHTML = `
+                <div class="w-full flex justify-between items-center">
+                    <span class="text-[9px] font-bold text-stone-500 uppercase tracking-widest">
+                        ${key}
+                    </span>
+                    <span class="px-2 py-0.5 rounded-full bg-stone-100 text-stone-500 text-[9px] font-bold uppercase status">
+                        --
+                    </span>
                 </div>
-            `;
-
-        try {
-            const res = await fetch("/dashboard/api/resource_to_day.php", {
-                cache: "no-store"
-            });
-            if (!res.ok) throw new Error(`HTTP ${res.status}`);
-
-            const data = await res.json();
-
-            const item = Array.isArray(data) ?
-                data.find(x => String(x.id) === "1") :
-                (String(data?.id) === "1" ? data : null);
-
-            if (!item) {
-                box.innerHTML = `
-                    <div class="w-full shrink-0 snap-start flex items-center justify-center">
-                    <span class="text-xs text-stone-400">ไม่พบข้อมูล id=1</span>
+                <div class="flex-1 flex items-center justify-center">
+                    <div class="flex items-baseline gap-1">
+                        <span class="text-lg font-black text-black value">
+                            ${value}
+                        </span>
+                        <span class="text-sm font-bold text-stone-400">
+                            ${row.unit}
+                        </span>
                     </div>
-                `;
-                return;
-            }
+                </div>
 
-            box.innerHTML = `
-                <div class="w-full h-full shrink-0 snap-start">
-                    <div class="w-full h-full">
-                    ${renderResourceCard(item)}
+                <!-- Range Bar with Fixed Gradient -->
+                <div class="metric-range mt-2 hidden" data-key="${key}">
+                    <div class="flex justify-between text-[8px] font-bold leading-none mb-1">
+                        <span class="label-left"></span>
+                        <span class="label-right"></span>
+                    </div>
+
+                    <div class="relative h-1.5 rounded-full bar">
+                        <div class="fill"></div>
                     </div>
                 </div>
                 `;
 
-        } catch (err) {
-            console.error("❌ loadResourceToday error:", err);
-            box.innerHTML = `
-                <div class="w-full shrink-0 snap-start flex items-center justify-center">
-                    <span class="text-xs text-red-500 font-semibold">โหลดข้อมูลไม่สำเร็จ</span>
-                </div>
-                `;
-        }
+            metricsCards.appendChild(div);
+
+            setCardValue(key, value, min, max);
+        })
     }
 
-    function stopResourceAutoSlide() {
-        const box = document.getElementById("resource-info");
-        if (box) box.removeEventListener("scroll", onResourceScroll);
-
-        if (resourceTimer) {
-            clearInterval(resourceTimer);
-            resourceTimer = null;
-        }
+    function Card1(sensors) {
+        // code ...
+    }
+    function Card2(sensors) {
+        // code ...
+    }
+    function Card3(costs) {
+        // code ...
+    }
+    function Card4(costs) {
+        // code ...
     }
 
-    function onResourceScroll() {
-        const box = document.getElementById("resource-info");
-        if (!box) return;
-
-        const w = box.clientWidth || 1;
-        const idx = Math.round(box.scrollLeft / w);
-        if (Number.isFinite(idx)) resourceIndex = clamp(idx, 0, Math.max(0, resourceTotal - 1));
-    }
-
-    function renderResourceCard(item) {
-        const id = item.id ?? "-";
-        const water = toNumber(item.water_value);
-        const waterUnit = item.water_unit ?? "m3";
-        const elec = toNumber(item.electric_value);
-        const elecUnit = item.electric_unit ?? "kWh";
-        const status = String(item.status ?? "NORMAL").toUpperCase();
-        const updated = item.updated_at ?? "";
-
-        return `
-                <div class=" ">
-                <div class="flex flex-row-reverse mb-2">
-                </div>
-
-                <div class="grid grid-cols-2 gap-2">
-                    <div class="rounded-lg bg-gray-100 border border-stone-200 p-2">
-                    <div class="text-[10px] text-stone-500 font-semibold text-center">ค่าน้ำประปา</div>
-                    <div class="text-sm text-center font-extrabold ${water === 0 ? "text-stone-400" : "text-stone-800"}">
-                        ${formatNumber(water)} <span class="text-[10px] font-bold text-stone-500">${escapeHtml(waterUnit)}</span>
-                    </div>
-                    </div>
-
-                    <div class="rounded-lg bg-gray-100 border border-stone-200 p-2">
-                    <div class="text-[10px] text-stone-500 font-semibold text-center">ค่าไฟฟ้า</div>
-                    <div class="text-sm text-center font-extrabold ${elec === 0 ? "text-stone-400" : "text-stone-800"}">
-                        ${formatNumber(elec)} <span class="text-[10px] font-bold text-stone-500">${escapeHtml(elecUnit)}</span>
-                    </div>
-                    </div>
-                </div>
-
-                <div class="mt-2 text-[9px] text-stone-400 font-semibold text-end">
-                    อัปเดต: ${escapeHtml(updated)}
-                </div>
-                </div>
-            `;
-    }
-
-    function toNumber(v) {
-        const n = parseFloat(v);
-        return Number.isFinite(n) ? n : 0;
-    }
-
-    function formatNumber(n) {
-        return (Number.isFinite(n) ? n : 0).toFixed(1);
-    }
-
-    function escapeHtml(text) {
-        const div = document.createElement('div');
-        div.textContent = text;
-        return div.innerHTML;
-    }
 
     let doChart = null;
 
-    async function loadDoTrendData() {
+    async function loadGraphsensorById() {
         const loading = document.getElementById('do-loading');
 
         try {
-            const res = await fetch('/dashboard/api/monitor_trend.php', {
-                cache: 'no-store'
-            });
-            const data = await res.json();
+            const data = Object.values(sensors).find(
+                s => s.monitor_id.toString() === sensor_select.toString()
+            );
+            console.log(data);
+
 
             console.log('📊 DO Trend API Response:', data);
 
-            const doData = data.find(item => item.device_id === 2);
 
-            if (!doData || !doData.points || doData.points.length === 0) {
-                console.warn('⚠️ ไม่มีข้อมูล DO');
+            if (!data || !data.logs || data.logs.length === 0) {
+                console.warn('⚠️ ไม่มีข้อมูล ' + data.monitor_name);
                 renderDoChart([], []);
                 return;
             }
 
-            const labels = doData.points.map(p => {
-                const d = new Date(p.time);
+            const labels = data.logs.map(p => {
+                const d = new Date(p.createtime);
                 return `${d.getHours().toString().padStart(2, '0')}:${d.getMinutes().toString().padStart(2, '0')}`;
             });
 
-            const values = doData.points.map(p => parseFloat(p.value));
+            const values = data.logs.map(p => parseFloat(p.data_value));
 
             renderDoChart(labels, values);
 
@@ -475,7 +203,7 @@
                     },
                     y: {
                         beginAtZero: true,
-                        max: 10,
+                        // max: 10,
                         ticks: {
                             font: {
                                 size: fontSize
@@ -603,8 +331,5 @@
         });
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-        initMetricBars();
-        loadMarketPriceTrend();
-    });
+
 </script>
