--- a/dashboard/styles/css-solar.html
+++ b/dashboard/styles/css-solar.html
@@ -99,6 +99,22 @@
             );
         }
 
+        .metric-range[data-key="Voltage_S"] .fill {
+            background: linear-gradient(90deg,
+                #7F1D1D 0%,
+                #DC2626 10%,
+                #F97316 20%,
+                #EAB308 30%,
+                #22C55E 40%,
+                #22C55E 50%,
+                #22C55E 60%,
+                #EAB308 70%,
+                #F97316 80%,
+                #DC2626 90%,
+                #7F1D1D 100%
+            );
+        }
+
         .metric-range .tick {
             position: absolute;
             top: 0;
