--- a/dashboard/scripts/js-shrimp.html
+++ b/dashboard/scripts/js-shrimp.html
@@ -1,23 +1,25 @@
 <!-- JavaScript -->
 <script>
-    let sensors = {};
     let isLoading = true;
     let sensor_select = 0;
 
-    const Sensors_name = ["DO", "PH", "EC", "Temp", "Salinity", "Turbidity"];
+    const Sensors_name_bottom = ["DO", "PH", "EC", "Temp", "Salinity", "Turbidity"];
+    const Sensors_name_left = ["DO", "PH", "EC", "Temp", "Salinity", "Turbidity"];
+    const Sensors_name_right = ["DO", "PH", "EC", "Temp", "Salinity", "Turbidity"];
     const market_name = "chicken";    //name market example => solar, shrimp, indoor, outdoor
     const type = "price";             //multi type example => demand,price
 
     // Adjust font sizes based on screen width
     document.addEventListener('DOMContentLoaded', async () => {
 
-        await loadSensorData();
+        await SensorsBottom();
+        await SensorsLeft();
+        await SensorsRight();
         await Card1();
         await Card2();
         await Card3();
         await Card4();
 
-        await loadGraphSensorById();
         await loadGraphMarketById();
         initMetricBars();
         isLoading = false;
@@ -28,35 +30,97 @@
 
     });
 
-    async function loadSensorData() {
+    async function SensorsBottom() {
         try {
             const res = await fetch('../../api-website/plot_sensor_log_multiple.php',
                 {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
-                        sensorLog: Sensors_name
+                        sensorLog: Sensors_name_bottom
                     })
                 }
             );
             const data = await res.json();
-            sensors = data['sensors'];
+            const sensors = data['sensors'];
 
-            Create_sensorCard(Sensors_name, sensors);
+            Create_sensorCard(Sensors_name_bottom, sensors);
 
             const firstKey = Object.keys(sensors)[0];
             sensor_select = isLoading ? sensors[firstKey].monitor_id ?? 0 : sensor_select;
+
+            loadGraphSensorById(sensors);
 
         } catch (err) {
             console.error('❌ loadSensorData error:', err);
         }
     }
 
-    function Create_sensorCard(sensor_names, values) {
+    async function SensorsLeft() {
+        try {
+            const res = await fetch('../../api-website/plot_sensor_log_multiple.php',
+                {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        sensorLog: Sensors_name_left
+                    })
+                }
+            );
+            const data = await res.json();
+            const sensors = data['sensors'];
+
+            console.log("Left");
+            console.log(sensors);
+
+            Object.values(Sensors_name_left).forEach((sensorName, index) => {
+
+                const sensor = sensors[sensorName];
+                if (!sensor) return;
+
+                const latestValue = sensor.logs?.[0]?.data_value ?? "-";
+                const unit = sensor.unit ?? "";
+                console.log(latestValue);
+
+
+                setCard("left", index + 1, sensorName, latestValue, unit);
+
+            });
+
+
+
+        } catch (err) {
+            console.error('❌ loadSensorData error:', err);
+        }
+    }
+
+    async function SensorsRight() {
+        try {
+            const res = await fetch('../../api-website/plot_sensor_log_multiple.php',
+                {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        sensorLog: Sensors_name_right
+                    })
+                }
+            );
+            const data = await res.json();
+            const sensors = data['sensors'];
+
+            console.log("right");
+            console.log(sensors);
+
+        } catch (err) {
+            console.error('❌ loadSensorData error:', err);
+        }
+    }
+
+    function Create_sensorCard(sensor_names, sensors) {
         let metricsCards = document.getElementById('metrics-cards');
         metricsCards.innerHTML = "";
         Object.values(sensor_names).forEach((s) => {
-            const row = values[s] || { "min": 0, "max": 0, "unit": "--", "logs": [] };
+            const row = sensors[s] || { "min": 0, "max": 0, "unit": "--", "logs": [] };
             const min = row['min'] || 0;
             const max = row['max'] || 1;
             let value = row.logs.length > 0 ? row.logs[0].data_value : "--";
@@ -100,7 +164,7 @@
                 div.onclick = () => {
                     console.log("Select sensor : " + row.monitor_name);
                     sensor_select = row.monitor_id;
-                    loadGraphSensorById();
+                    loadGraphSensorById(sensors);
                 }
             }
 
@@ -112,13 +176,23 @@
 
     async function Card1() {
         console.log("Card 1");
+        const table_type = 1;     //Watch table id in 
         try {
+            const res = await fetch('../../api-website/fetch_tableByTypeId.php?typeId=' + table_type + "&aDay=" + diff.day);
+            const raw = await res.json();
+            const table = Object.values(raw.data);
+
+            const mealsCount = table[0].value;
+            const volumeMeal = table[0].children[0]['value'];
+            const totalMealperDay = (toNumber(mealsCount) * toNumber(volumeMeal)) || "-";
+
+            SetValueInHTMLById('meals-count', mealsCount);
+            SetValueInHTMLById('volume-meal', volumeMeal);
+            SetValueInHTMLById('total-meal-per-day', totalMealperDay);
 
         } catch (err) {
             console.error('❌ loadSensorData error:', err);
         }
-
-
     }
 
     async function Card2() {
@@ -151,6 +225,7 @@
     }
 
     async function Card3() {
+        console.log("Card 3");
         try {
         } catch (err) {
             console.error('❌ loadSensorData error:', err);
@@ -159,6 +234,7 @@
     }
 
     async function Card4() {
+        console.log("Card 4");
         try {
 
         } catch (err) {
@@ -170,7 +246,7 @@
     let sensorChart = null;
     let trendChart = null;
 
-    async function loadGraphSensorById() {
+    async function loadGraphSensorById(sensors) {
         const loading = document.getElementById('do-loading');
         const title = document.getElementById('title-graph-sensor');
         const Subtitle = document.getElementById('title-graph-sensor-sub');
@@ -451,6 +527,5 @@
         trendChart.options.scales.y.max = max
         trendChart.update();
     }
-
 
 </script>
