--- a/dashboard/styles/css-default.html
+++ b/dashboard/styles/css-default.html
@@ -280,6 +280,19 @@
             }
             
             /* Chart titles and text */
+
+            .text-\[15px\] {
+                font-size: 5rem !important;
+            }
+            .text-\[14px\] {
+                font-size: 4rem !important;
+            }
+            .text-\[13px\] {
+                font-size: 3rem !important;
+            }
+            .text-\[12px\] {
+                font-size: 2.5rem !important;
+            }
             .text-\[11px\] {
                 font-size: 2rem !important;
             }
